fiscal-fox/syntax_error.txt
node : C:\Users\Overlor
d\Downloads\Hacked2026\
hacked-fiscal-fox\fisca
l-fox\public\content\ni
ght-mode.js:149
At line:1 char:1
+ node -c public/conten
t/night-mode.js 2>&1 | 
Out-File -Encoding 
utf8 s ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (C:\Users\Over   
 lo...ght-mode.js:1    
49:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
    });
     ^

SyntaxError: 
Unexpected token ')'
    at wrapSafe (node:i
nternal/modules/cjs/loa
der:1735:18)
    at checkSyntax (nod
e:internal/main/check_s
yntax:76:3)

Node.js v24.13.1
